# RDT-Protocol

./: .gitignore  CMakeLists.txt  client.cpp  client.h  client_parser.h  datagram.cpp  datagram_builder.cpp  datagram_builder.h  dummy_client.cpp  selective_repeat_vs_stop_and_wait.py  selective_repeat_vs_stop_and_wait.txt  server.cpp  server.h  server_parser.cpp  server_parser.h  window_size_history.txt  window_size_plotter.py
client/: client.cpp  client.h
client/filewriter/: file_writer.cpp  file_writer.h
client/parser/: client_parser.cpp  client_parser.h
client/strategy/: client_go_back_N_strategy.cpp  client_go_back_N_strategy.h  client_rdt_strategy.h  client_selective_repeat_strategy.cpp  client_selective_repeat_strategy.h
server/: go_back_N_strategy.cpp  packet_sender.cpp  packet_sender.h  rdt_strategy.h  selective_repeat_strategy.cpp  selective_repeat_strategy.h  server.cpp  server.h  timer_thread.cpp  timer_thread.h  worker_thread.cpp  worker_thread.h
server/filereader/: datagram_builder.cpp  datagram_builder.h  packet_builder.cpp  packet_builder.h
server/parser/: server_parser.cpp  server_parser.h
server/strategy/: go_back_N_strategy.cpp  go_back_N_strategy.h  rdt_strategy.h  selective_repeat_strategy.cpp  selective_repeat_strategy.h  stop_and_wait_strategy.cpp  stop_and_wait_strategy.h
shared/: ack_packet.cpp  ack_packet.h  data_packet.cpp  data_packet.h  datagram.cpp  datagram.h  datagram_util.h  packet_parser.cpp  packet_parser.h  packet_util.cpp  packet_util.h
